--- a/DotNetTts/DotNetTts.csproj
+++ b/DotNetTts/DotNetTts.csproj
@@ -1,12 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-        <LangVersion>9</LangVersion>
+        <LangVersion>11</LangVersion>
+        <TargetFrameworks>net7.0;netstandard2.0;net481;net8.0</TargetFrameworks>
+        
     </PropertyGroup>
 
 	<PropertyGroup>
 	   <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageReadmeFile>readme.md</PackageReadmeFile>
+    </PropertyGroup>
+
+	<ItemGroup>
+		<None Include="docs\readme.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
 </Project>
