add soundplayer and utils

--- a/DotNetTtsCmdTest/DotNetTtsCmdTest.csproj
+++ b/DotNetTtsCmdTest/DotNetTtsCmdTest.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DotNetTts\DotNetTts.csproj" />
+      <ProjectReference Include="..\FfPlay.DotNetTts.Runtimes\FfPlay.DotNetTts.Runtimes.csproj" />
       <ProjectReference Include="..\Piper.DotNetTts.Runtimes.LinuxX86_64\Piper.DotNetTts.Runtimes.LinuxX86_64.csproj" />
       <ProjectReference Include="..\Piper.DotNetTts.Runtimes.WinX64\Piper.DotNetTts.Runtimes.WinX64.csproj" />
       <ProjectReference Include="..\PiperDotNetTts\PiperDotNetTts.csproj" />
